fix: solve problem with covering markers by legend text

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -200,36 +200,45 @@ th.row {
   z-index: 400;
 
   &-item {
-    overflow-x: hidden;
     display: flex;
     flex-direction: row-reverse;
     margin-bottom: 5px;
   }
 
   & .box {
+    position: relative;
     display: block;
     width: 30px;
     height: 30px;
     margin-left: 5px;
     cursor: pointer;
-    opacity: 0.4;
+    opacity: 1;
     z-index: 2;
 
-    &:hover + .text {
-      display: block;
+    &:hover > .text {
+      transform: translateX(0px);
     }
   }
 
-  
-
-
   & .text {
+    position: absolute;
+    top: 0;
+    right: 40px;
+    display: inline-block;
+    height: 20px;
+    transform: translateX(600px);
+    transition: all 0.3s ease-in-out;
     font-size: 12px;
     background: rgba(255, 255, 255, 0.4);
+    color: black !important;
     padding: 5px 20px;
     font-size: 12px;
     font-weight: bold;
-    z-index: 1;
-    display: none;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
+}
+
+.marker-popup {
+  z-index: 401;
 }
